<resources>
    <string name="app_name">WildTracks</string>
    <string name="file_picker_name">Select Mapping File</string>
    <string name="title_activity_maps">Map</string>

    <string name="new_marker_title">New Marker</string>
    <string name="marker_name_hint">Marker Name</string>

    <string name="menu_title_drop_marker">Drop Marker</string>
    <string name="menu_title_map_provider">Data Provider</string>
    <string name="menu_title_activities">Activities</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_legal_notices">Legal Notices</string>

    <string name="dialog_drop_pin_title">Edit Marker</string>

    <string name="mapping_source_title">Map Source</string>
    <string name="mapping_source_google_terrain">Google Terrain (Online)</string>
    <string name="mapping_source_usgs_topo">USGS Topographic (Online)</string>
    <string name="mapping_source_local_mbtiles">Local MBTiles (Offline)</string>
    <string name="mapping_source_local_cache">Local Cache File (Offline)</string>


    <string name="dialog_legal_notices_library_attributions">Library Attributions</string>
    <string name="dialog_legal_notices_google_maps_title">Google Maps for Android API v2</string>
    <string name="dialog_legal_notices_usgs_title">USGS Mapping Data</string>
    <string name="dialog_legal_notices_usgs_text">This program provides the option to use mapping data provided by The National Map, a project hosted by the United States Geological Survey (USGS) of the United States Department of the Interior. All mapping data provided by their servers is the property of the United States government and must be used according to their terms of use. For more information, please see <a href="http://http://nationalmap.gov//">The National Map</a></string>
    <string name="dialog_legal_notices_nononsense_title">NoNonsense File Picker</string>
    <string name="dialog_legal_notices_nononsense_text">This program utilizes the NoNonsense File Picker (https://github.com/spacecowboy/NoNonsense-FilePicker) by GitHub user spacecowboy (https://github.com/spacecowboy). The terms of its license are included below and pertain only to the portion of this application\'s object code which comes from this library.</string>
    <string name="dialog_edit_activities_title">Activities</string>
    <string name="dialog_activity_icon_chooser_title">Select An Icon</string>
    <string name="menu_edit_activities_action_save">Save</string>
    <string name="menu_creation_time_prefix">Created: %1$s, %2$s</string>
    <string name="menu_coordinates_placeholder">0.0, 0.0</string>
    <string name="marker_notes_hint">Notes</string>

    <string-array name="dialog_legal_notices_items">
        <item>Google Maps Android API</item>
        <item>USGS Mapping Data</item>
        <item>NoNonsense File Picker</item>
    </string-array>
</resources>
