<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapping_source_subheader"
        android:title="@string/mapping_source_title">
    <menu>
        <item
            android:id="@+id/mapping_source_google_terrain"
            android:checked="true"
            android:icon="@drawable/ic_map_white"
            android:title="@string/mapping_source_google_terrain"/>
        <item
            android:id="@+id/mapping_source_usgs_topo"
            android:icon="@drawable/ic_map_white"
            android:title="@string/mapping_source_usgs_topo"/>
        <item
            android:id="@+id/mapping_source_local_mbtiles"
            android:icon="@drawable/ic_map_white"
            android:title="@string/mapping_source_local_mbtiles"/>
        <item
            android:id="@+id/mapping_source_local_cache"
            android:icon="@drawable/ic_map_white"
            android:title="@string/mapping_source_local_cache"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_activities"
        android:title="@string/menu_title_activities"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_title_settings"/>

    <item
        android:id="@+id/menu_legal"
        android:title="@string/menu_title_legal_notices"/>
</menu>